# neural_network

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  style.css
examples/: mnist.rs  mnist_conv.rs  mnist_multi.rs  mnist_trained.rs  xor.rs
models/: conv-mnist.safetensors  mnist  mnist_conv
src/: activations.rs  lib.rs  loss.rs  main.rs  network.rs  trainer.rs
src/layer/: convolution.rs  dense.rs  mod.rs
wasm/: Cargo.toml
wasm/pkg/: wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
wasm/src/: lib.rs
