[package]
name = "neural_network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
mnist = { git = "https://github.com/Allen-Dai/mnist"}
serde = { version = "1.0.137", features = ["derive"] }
serde_cbor = "0.11.2"
typetag = "0.2.3"
erased-serde = "0.3.22"
