[package]
name = "neural_network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
serde = { version = "1.0.137", features = ["derive"] }
serde_cbor = "0.11.2"
getrandom = { version = "0.2", features = ["js"] }
scoped_threadpool = "0.1.9"
num_cpus = "1.14.0"

[dev-dependencies]
mnist = { git = "https://github.com/Allen-Dai/mnist"}
