[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.16"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
neural_network = {path ="../../neural_network"}

[lib]
crate-type = ["cdylib", "lib"]
